<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.github.xiechanglei</groupId>
        <artifactId>xie-cells-starter</artifactId>
        <version>${revision}</version>
    </parent>

    <artifactId>xie-cell-starter-web</artifactId>
    <name>Xie-Cells Web starter Module</name>
    <description>spring boot starter of web for Xie-Cells framework</description>


    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
            <!-- 抛弃默认的tomcat容器  -->
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--        使用undertow作为servlet的容器-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-undertow</artifactId>
        </dependency>

        <!--        默认导入spring starter-->
        <dependency>
            <groupId>io.github.xiechanglei</groupId>
            <artifactId>xie-cell-starter-spring</artifactId>
        </dependency>

        <!-- 验证 提供默认导入，常规的web项目都需要引入这个依赖 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- aop-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>

        <!-- spring data相关Bean支持，主要是page对象以及sort的解析以及序列化需要用到 -->
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-commons</artifactId>
        </dependency>

        <!--        web flux 返回支持-->
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-core</artifactId>
        </dependency>

        <!--        beans-->
        <dependency>
            <groupId>io.github.xiechanglei</groupId>
            <artifactId>xie-cell-common-bean</artifactId>
        </dependency>

        <dependency>
            <groupId>io.github.xiechanglei</groupId>
            <artifactId>xie-cell-common-lang</artifactId>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>